--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@
 
 title: CorrelAid Code[s]
 description: Code from all corners of the CorrelAid network
-github_username: CorrelAid
+github_username: KonradUdoHannes
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "correlaid-codes"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value.
-url: "https://codes.correlaid.org" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://KonradUdoHannes.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -34,7 +34,7 @@ url: "https://codes.correlaid.org" # the base hostname & protocol for your site,
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/" # the subpath of your site, e.g. "/blog".
+baseurl: "/correlaid-codes" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
